# CS7GV6-202526-Starter-code-for-Modelling

./: CMakeLists.txt  README.md
source code/: main.cpp
